chore: deploy to github pages

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "serve": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && vite build --base ./ && gh-pages -d dist"
   },
   "dependencies": {
     "ant-design-vue": "^4.0.7",
@@ -14,8 +15,11 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "gh-pages": "^6.1.0",
     "sass": "^1.69.5",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-gh-pages": "^0.4.1",
+    "vite-plugin-pages": "^0.31.0"
   }
 }
